--- a/carts/templates/carts/cart.html
+++ b/carts/templates/carts/cart.html
@@ -2,10 +2,17 @@
 {% load static %}
 {% block section_content %}
     <section class="section-content padding-y bg">
-<div class="container">
+	<div class="container">
 
 <!-- ============================ COMPONENT 1 ================================= -->
+{%if not cart_items%}
+	<h2 class="text-center">Your shopping Cart is Emphty</h2>
+	<br>
+	<div class="text-center">
+		<a href="{% url 'product:products' %}" class="btn btn-primary"> Countinue Shopping</a>
+	</div>
 
+{% else %}
 <div class="row">
 	<aside class="col-lg-9">
 <div class="card">
@@ -19,6 +26,9 @@
 </tr>
 </thead>
 <tbody>
+
+
+
 {% for cart_item in cart_items %}
 <tr>
 	<td>
@@ -26,7 +36,13 @@
 			<div class="aside"><img src="{{ cart_item.product.product_image.url }}" class="img-sm"></div>
 			<figcaption class="info">
 				<a href="#" class="title text-dark">{{ cart_item.product.product_name }}</a>
-				<p class="text-muted small">Color: 25 Mpx <br> Size: Canon</p>
+				<p class="text-muted small">
+				{% if cart_item.variations.all %}
+					{% for item in cart_item.variations.all %}
+						{{item.variation_value}}
+					{% endfor %}
+				{% endif %}
+				</p>
 			</figcaption>
 		</figure>
 	</td>
@@ -35,7 +51,7 @@
 					<div class="col">
 						<div class="input-group input-spinner">
 							<div class="input-group-prepend">
-							<button class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </button>
+							<a href="{% url 'cart:remove_cart' cart_item.product.id %}" class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </a>
 							</div>
 							<input type="text" class="form-control"  value="{{ cart_item.quantity }}">
 							<div class="input-group-append">
@@ -51,8 +67,8 @@
 		</div> <!-- price-wrap .// -->
 	</td>
 	<td class="text-right">
-	<a href="" class="btn btn-danger"> Remove</a>
-	</td>
+	<a href="{% url 'cart:remove_cart_item' cart_item.product.id%}" class="btn btn-danger"> Remove</a>
+	</td>d
 
 </tr>
 {% endfor %}
@@ -85,7 +101,7 @@
 			<a href="./store.html" class="btn btn-light btn-block">Continue Shopping</a>
 		</div> <!-- card-body.// -->
 		</div> <!-- card.// -->
-
+		{% endif %}
 </aside> <!-- col.// -->
 
 
@@ -94,6 +110,27 @@
 
 </div> <!-- container .//  -->
 </section>
-{% endblock %}
 
+{% endblock %}
+{% block footer %}
+    <footer class="section-footer border-top">
+	<div class="container">
+		<section class="footer-bottom border-top row">
+			<div class="col-md-2">
+				<p class="text-muted"> &copy 2019 Company name </p>
+			</div>
+			<div class="col-md-8 text-md-center">
+				<span  class="px-2">info@pixsellz.io</span>
+				<span  class="px-2">+879-332-9375</span>
+				<span  class="px-2">Street name 123, Avanue abc</span>
+			</div>
+			<div class="col-md-2 text-md-right text-muted">
+				<i class="fab fa-lg fa-cc-visa"></i>
+				<i class="fab fa-lg fa-cc-paypal"></i>
+				<i class="fab fa-lg fa-cc-mastercard"></i>
+			</div>
+		</section>
+	</div><!-- //container -->
+    </footer>
+{% endblock %}
 <!-- ========================= SECTION CONTENT END// ========================= -->
