--- a/store/templates/store/product_detail.html
+++ b/store/templates/store/product_detail.html
@@ -73,38 +73,50 @@
 <div class="row">
 			<div class="col-md-9">
 
-	<header class="section-heading">
-		<h3>Customer Reviews </h3>
 
-	</header>
-    <form action="" method="POST"></form>
+    <form action="{% url 'product:submit_review' single_product.id  %}" method="POST">
                 {% csrf_token %}
     <h5>Write your review</h5>
     <div>
         <lable>How do you rate this product?</lable>
         <br>
-        <div class="stars">
-  <input type="radio" id="star1" name="rating" value="1" />
-  <label for="star1" title="1 stars"></label>
-  <input type="radio" id="star2" name="rating" value="2" />
-  <label for="star2" title="2 stars"></label>
-  <input type="radio" id="star3" name="rating" value="3" />
-  <label for="star3" title="3 stars"></label>
-  <input type="radio" id="star4" name="rating" value="4" />
-  <label for="star4" title="4 stars"></label>
-  <input type="radio" id="star5" name="rating" value="5" />
-  <label for="star5" title="5 star"></label>
-</div>
+
+    <div class="rating">
+    <input type="radio" id="star5" name="rating" value="5"/>
+    <label for="star5">&#9733;</label>
+    <input type="radio" id="star4" name="rating" value="4"/>
+    <label for="star4">&#9733;</label>
+    <input type="radio" id="star3" name="rating" value="3"/>
+    <label for="star3">&#9733;</label>
+    <input type="radio" id="star2" name="rating" value="2"/>
+    <label for="star2">&#9733;</label>
+    <input type="radio" id="star1" name="rating" value="1"/>
+    <label for="star1">&#9733;</label>
+    </div>
         Review Title
         <input type="text" class="form-control" name="subject" >
         <br>
         Review:
         <textarea name="review" cols="10" rows="4" class="form-control" ></textarea>
         <br>
-        <input type="submit" value="Submit Review" class="btn btn-primary">
+        {% if user.is_authenticated %}
+            {% if order_product %}
+                <input type="submit" value="Submit Review" class="btn btn-primary">
+            {% else %}
+                <p>You must purchase this to post review></p>
+            {% endif %}
+        {% else %}
+            <p>You must be logged in to a post review<span><a href="{% url 'user:login' %}">Login now</a></span></p>
+        {% endif %}
     </div>
+
     </form>
+                	<header class="section-heading">
+		<h3>Customer Reviews </h3>
+
+	</header>
                 <br>
+{% for review in reviews %}
 	<article class="box mb-3">
 		<div class="icontext w-100">
 			<img src="./images/avatars/avatar1.jpg" class="img-xs icon rounded-circle">
@@ -114,6 +126,7 @@
 
 			</div>
 		</div> <!-- icontext.// -->
+
 		<div class="mt-3">
 			<p>
 				Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -122,7 +135,7 @@
 			</p>
 		</div>
 	</article>
-
+{% endfor%}
 
 
 	</div> <!-- col.// -->
